Corrected textarea alignment with other page elements, especially on the right side.
git-svn-id: file:///home/git-svn-mirror/pushmi-svn-mirror/trunk@51624 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/extensions/UsabilityInitiative/EditToolbar/EditToolbar.css
+++ b/extensions/UsabilityInitiative/EditToolbar/EditToolbar.css
@@ -1,16 +1,20 @@
 /* CSS StyleSheet for Toolbar extensions */
 
-/* MEDIAWIKI DEPENDENT ID */
+/* MEDIAWIKI DEPENDENT IDs */
+form#editform {
+	margin: 0;
+	padding: 0;
+	padding-right: 22px;
+}
 textarea#wpTextbox1 {
 	border: solid silver 1px;
+	padding: 10px;
+	margin-top: -2px;
 }
 /* ... */
 div#edittoolbar {
-	width: 100%;
-	padding: 0.1em;
 	border: solid silver 1px;
 	border-bottom-width: 0;
-	margin-bottom: -1px;
 	background-color: #EEEEEE;
 }
 div#edittoolbar div.tabs,
